fixes overflow in mobile layout

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -23,3 +23,11 @@
     align-items: center;
 }
 
+@media screen and (max-width: 450px){
+    .About-header1{
+        font-size: 1.75rem;
+    }
+    .About-text{
+        max-width: 95%
+    }
+}
