--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -24,3 +24,16 @@
     width: 50px;
 
 }
+
+@media (max-width: 450px) {
+    .Contact-link{
+        font-size: .75em;
+    }
+
+}
+
+@media screen and (max-width: 400px) {
+    .Contact-link{
+        display: none;
+    }
+}
