--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,6 +1,7 @@
 .Header{
     background: #F0F7F4;
-    height:100vh;
+    height:85vh;
     display: grid;
     place-items: center;
 }
+
