--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -69,3 +69,9 @@
     justify-content: space-around; 
 
 }
+
+@media screen and (max-width: 450px){
+    .Projects{
+        padding-top:5em;
+    }
+}
