--- a/src/components/skill/Skill.css
+++ b/src/components/skill/Skill.css
@@ -1,5 +1,5 @@
 .Skill{
-    padding:2em;
+    padding:1.5em;
     border-radius: 2em;
     margin:1em;
     -webkit-box-shadow: 0 10px 12.5px 11px #c1c0c0;
@@ -18,4 +18,34 @@
 
 .Skill-text{
     font-size: 1.25em;
+}
+
+
+@media  (max-width: 1000px) {
+    .Skill{
+        padding:.75em;
+        margin:.75em .25em;
+        -webkit-box-shadow: 0 10px 10px 7px #c1c0c0;
+        -moz-box-shadow: 0 10px 10px 7px #c1c0c0;
+        box-shadow: 0 10px 10px 7px #c1c0c0;
+        transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+    }
+    .Skill-text{
+        font-size: 1.25em;
+    }
+}
+
+
+@media (max-width: 600px){
+    .Skill{
+        padding:.25em;
+        margin:.75em .25em;
+        -webkit-box-shadow: 0 10px 10px 7px #c1c0c0;
+        -moz-box-shadow: 0 10px 10px 7px #c1c0c0;
+        box-shadow: 0 10px 10px 7px #c1c0c0;
+        transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+    }
+    .Skill-text{
+        font-size: .8em;
+    }
 }
